--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,45 +1,42 @@
-{% set version = "0.8.8.1" %}
+{% set version = '0.8.8.1' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
-{% set cran_mirror = 'https://cran.r-project.org' %}
 
 package:
   name: r-clustermq
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: clustermq_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/clustermq_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/clustermq/clustermq_{{ version }}.tar.gz
   sha256: 1f3c61fd6fde7c14a63209d89d61d120522ca00ff099fc3e1eb87b98076ea2f7
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
   number: 0
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-r6
-    - r-infuser >=0.2.8
     - r-narray
     - r-progress
     - r-purrr
-    - r-rzmq >=0.9.3
+    - r-rzmq >=0.9.4
   run:
     - r-base
     - r-r6
-    - r-infuser >=0.2.8
     - r-narray
     - r-progress
     - r-purrr
-    - r-rzmq >=0.9.3
+    - r-rzmq >=0.9.4
 
 test:
   commands:
@@ -49,18 +46,36 @@ test:
 about:
   home: https://github.com/mschubert/clustermq
   license: Apache 2.0
-  license_file: LICENSE
   summary: Evaluate arbitrary function calls using workers on HPC schedulers in single line of
     code. All processing is done on the network without accessing the file system. Remote
     schedulers are supported via SSH.
   license_family: APACHE
+  license_file:
+    - LICENSE
 
 extra:
   recipe-maintainers:
     - conda-forge/r
     - nick-youngblut
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
+
+# Package: clustermq
+# Title: Evaluate Function Calls on HPC Schedulers (LSF, SGE, SLURM, PBS/Torque)
+# Version: 0.8.8.1
+# Authors@R: c( person('Michael', 'Schubert', email='mschu.dev@gmail.com', role = c('aut', 'cre', 'cph'), comment = c(ORCID='0000-0002-6862-5221') ), person('EMBL', role = c('cph', 'fnd')) )
+# Maintainer: Michael Schubert <mschu.dev@gmail.com>
+# Description: Evaluate arbitrary function calls using workers on HPC schedulers in single line of code. All processing is done on the network without accessing the file system. Remote schedulers are supported via SSH.
+# URL: https://github.com/mschubert/clustermq
+# BugReports: https://github.com/mschubert/clustermq/issues
+# Depends: R (>= 3.0.2)
+# Imports: narray, progress, purrr, R6, rzmq (>= 0.9.4), utils
+# License: Apache License (== 2.0) | file LICENSE
+# LazyData: true
+# Encoding: UTF-8
+# Suggests: devtools, dplyr, foreach, iterators, knitr, parallel, roxygen2 (>= 5.0.0), testthat, tools
+# VignetteBuilder: knitr
+# RoxygenNote: 6.1.1
+# NeedsCompilation: no
+# Packaged: 2019-12-18 08:29:04 UTC; mschu
+# Author: Michael Schubert [aut, cre, cph] (<https://orcid.org/0000-0002-6862-5221>), EMBL [cph, fnd]
+# Repository: CRAN
+# Date/Publication: 2019-12-18 10:10:02 UTC
