--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,21 +22,32 @@ build:
 
 requirements:
   build:
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('cxx') }}            # [not win]
+    - {{ compiler('m2w64_cxx') }}      # [win]
+    - {{ posix }}filesystem        # [win]
+    - {{ posix }}make
+    - {{ posix }}sed               # [win]
+    - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
   host:
+    - zeromq
     - r-base
     - r-r6
+    - r-rcpp
     - r-narray
     - r-progress
     - r-purrr
-    - r-rzmq >=0.9.4
   run:
+    - zeromq
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-r6
+    - r-rcpp
     - r-narray
     - r-progress
     - r-purrr
-    - r-rzmq >=0.9.4
 
 test:
   commands:
@@ -45,7 +56,7 @@ test:
 
 about:
   home: https://github.com/mschubert/clustermq
-  license: Apache 2.0
+  license: Apache-2.0
   summary: Evaluate arbitrary function calls using workers on HPC schedulers in single line of code. All processing is done on the network without accessing the file system. Remote schedulers are supported via SSH.
   license_family: APACHE
   license_file:
