--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,9 +27,14 @@ requirements:
     - {{ compiler('cxx') }}        # [not win]
     - {{ compiler('m2w64_cxx') }}  # [win]
     - {{ posix }}filesystem        # [win]
-    - {{ posix }}make
-    - {{ posix }}sed               # [win]
+    - {{ posix }}autoconf
+    - {{ posix }}automake          # [not win]
+    - {{ posix }}automake-wrapper  # [win]
     - {{ posix }}coreutils         # [win]
+    - {{ posix }}grep              # [win]
+    - {{ posix }}make
+    - {{ posix }}pkg-config
+    - {{ posix }}sed               # [win]
     - {{ posix }}zip               # [win]
   host:
     - zeromq                       # [not win]
